overflow fix

--- a/editor.css
+++ b/editor.css
@@ -189,7 +189,7 @@ label:hover{
     z-index: 2;
 }
 @media only screen and (max-width: 900px) {
-    body{
+    html, body{
         max-width: 100vw;
         overflow: hidden;
     }
